Fixes for mobile
Fixed border color of buttons on mobile. Fixed image for plant monitoring system not showing up.

--- a/globalAttributes.css
+++ b/globalAttributes.css
@@ -59,6 +59,7 @@ button {
     color: black;
     border-radius: 10%;
     border-width: 10px;
+    border-color: var(--accentOne);
 }
 
 button:hover {
